# AndroidMediaTask

./: README.md  README.md.bak
AudioDemo/app/: build.gradle
AudioDemo/app/src/androidTest/java/com/xinlan/audiodemo/: ExampleInstrumentedTest.java
AudioDemo/app/src/main/: AndroidManifest.xml
AudioDemo/app/src/main/cpp/: native-lib.cpp
AudioDemo/app/src/main/java/com/xinlan/audiodemo/: AudioCapture.java  AudioFileUtil.java  AudioPlayer.java  MainActivity.java  PCMPlayer.java
AudioDemo/app/src/main/res/layout/: activity_main.xml
AudioDemo/app/src/test/java/com/xinlan/audiodemo/: ExampleUnitTest.java
AudioDemo/gradle/wrapper/: gradle-wrapper.properties
CameraPreview/app/: build.gradle
CameraPreview/app/src/main/: AndroidManifest.xml
CameraPreview/app/src/main/java/com/xinlan/camerapreview/: MainActivity.java  SurfaceActivity.java  (+1 more)
CameraPreview/app/src/main/res/layout/: activity_main.xml  activity_surface.xml
CameraPreview/gradle/wrapper/: gradle-wrapper.properties
GLDraw/app/: build.gradle
GLDraw/app/src/main/: AndroidManifest.xml
GLDraw/app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
GLDraw/app/src/main/res/layout/: activity_main.xml
GLDraw/app/src/main/res/values/: strings.xml
GLDraw/app/src/main/shader/: point.vs
GLDraw/gradle/wrapper/: gradle-wrapper.properties
MediaApiDemo/app/: build.gradle
MediaApiDemo/app/src/main/: AndroidManifest.xml
MediaApiDemo/app/src/main/res/layout/: activity_main.xml
MediaApiDemo/app/src/main/res/values/: strings.xml
MediaApiDemo/gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
